name:                tstack
version:             0.1.0.0
synopsis:            A concurrent, thread-safe, transactional Stack
description:         A stack that runs in STM
homepage:            https://github.com/dmjio/tstack
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2018-2020
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Concurrent.STM.TStack
  build-depends:
   base < 5,
   stm
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable example
  main-is:
    Main.hs
  build-depends:
    base < 5,
    stm,
    tstack
  hs-source-dirs:
    exe
  default-language:
    Haskell2010
