name:                tstack
version:             0.1.0.0
description:         A concurrent, thread-safe, transactional stack
synopsis:            Stack that runs in STM
homepage:            https://github.com/dmjio/tstack
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          code@dmj.io
copyright:           David Johnson (c) 2018-2025
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

extra-source-files:
  README.md
  exe/Main.hs

library
  exposed-modules:
    Control.Concurrent.STM.TStack
  build-depends:
    base < 5,
    stm
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable example
  main-is:
    Main.hs
  build-depends:
    base < 5,
    stm,
    tstack
  hs-source-dirs:
    exe
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/tstack
